test/errors/offsets_error/zs/bitwise_and_operator_error.zs
package bitwise_and_operator_error;

struct BitwiseAndOperatorError
{
    uint32 offset;
offset & 0xf:
    string field;
};
